// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      <label
        htmlFor="search"
      >
         Search on HN: 
      </label>
      <input
        name="search"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        type="submit"
      >
        Submmit
      </button>
    </form>
  </div>
  <div
    className="interactions"
  >
    <form>
      <label
        htmlFor="filter"
      >
         Filter on title: 
      </label>
      <input
        name="filter"
        onChange={[Function]}
        type="text"
        value=""
      />
    </form>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className="greatButton "
  onClick={undefined}
  type="button"
>
  GIVE ME MORE
</button>
`;

exports[`List has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href={undefined}
        target="_blank"
      >
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="greatButton button-inline"
        onClick={[Function]}
        type="button"
      >
        DISMISS
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href={undefined}
        target="_blank"
      >
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="greatButton button-inline"
        onClick={[Function]}
        type="button"
      >
        DISMISS
      </button>
    </span>
  </div>
</div>
`;

exports[`SearchBox has a valid snapshot 1`] = `
<form
  onSubmit={undefined}
>
  <label
    htmlFor="search"
  >
    Search
  </label>
  <input
    name="search"
    onChange={undefined}
    type="text"
    value={undefined}
  />
  <button
    type="submit"
  >
    Submmit
  </button>
</form>
`;
